5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1593_820.log
== TEST (2019-03-26 12:35:14) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:36:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 11
    resto_R$50 = valor % 50
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:37:14) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R 50 = valor % 50

# Quantidade de notas de R$ 10
notas_R 10 = resto_R 50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R 10 = resto_R 50 % 10

# Quantidade de notas de R$ 2
notas_R 2 = resto_R 10 // 2

print(int(notas_R 50))
print(int(notas_R 10))
print(int(notas_R 2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R 50
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:37:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R 50 = valor % 50

# Quantidade de notas de R$ 10
notas_R 10 = resto_R 50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R 10 = resto_R 50 % 10

# Quantidade de notas de R$ 2
notas_R 2 = resto_R 10 // 2

print(int(notas_R 50))
print(int(notas_R 10))
print(int(notas_R 2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R 50
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:38:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R 10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 20
    notas_R2 = resto_R 10 // 2
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:38:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:39:06) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:39:22) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:39:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

va = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
va // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    va // 50 = notas_R50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:39:49) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

va = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
va// 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    va// 50 = notas_R50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:40:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:41:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:45:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:45:47) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x1 = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x1 // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = x1 % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
File "XXXX", line 8
    x1 // 50 = notas_R50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:46:12) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x1 = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x1 / 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = x1 % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
File "XXXX", line 8
    x1 / 50 = notas_R50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:46:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x1 = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x1// 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = x1 % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
File "XXXX", line 8
    x1// 50 = notas_R50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:47:20) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x1 = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x1 //50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = x1 % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
File "XXXX", line 8
    x1 //50 = notas_R50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 12:47:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x1 = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x1 //50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = x1 % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.178646
-- ERROR:
  File "/home/codebench/codes/1593/820/main.py", line 8
    x1 //50 = notas_R50
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:48:43) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x1 = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x1 % 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = x1 % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
File "XXXX", line 8
    x1 % 50 = notas_R50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:48:58) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x1 = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x1 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = x1 % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x1 = notas_R50
NameError: name 'notas_R50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:50:01) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x1 = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x1 = notasR50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = x1 % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x1 = notasR50
NameError: name 'notasR50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:50:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x1 = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x1 = notasR50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = x1 % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x1 = notasR50
NameError: name 'notasR50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:50:47) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x1 = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x1 = notas50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = x1 % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x1 = notas50
NameError: name 'notas50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:51:14) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x1 = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x1 = resto50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = x1 % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x1 = resto50
NameError: name 'resto50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:51:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x1 = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x1 = restoR50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = x1 % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x1 = restoR50
NameError: name 'restoR50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:52:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x1 = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x1 = notasR50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = x1 % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x1 = notasR50
NameError: name 'notasR50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:53:10) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x1 = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x1 = notasR50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = x1 % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x1 = notasR50
NameError: name 'notasR50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:54:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x1 = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x1 // 50 = notasR50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = x1 % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
File "XXXX", line 8
    x1 // 50 = notasR50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:54:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

x1 = float(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
x1 // 50 = notasR50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = x1 % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
File "XXXX", line 8
    x1 // 50 = notasR50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:57:08) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
a // 50 = notasR50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = a % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
File "XXXX", line 8
    a // 50 = notasR50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:57:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
50 // a = notasR50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = a % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
File "XXXX", line 8
    50 // a = notasR50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:58:38) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
a // 50 = notasR50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = a % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
File "XXXX", line 8
    a // 50 = notasR50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 12:58:51) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
(a // 50) = notasR50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = a % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
File "XXXX", line 8
    (a // 50) = notasR50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:00:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
a % 50 = notasR50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = a % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
File "XXXX", line 8
    a % 50 = notasR50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:00:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
a / 50 = notasR50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = a % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
File "XXXX", line 8
    a / 50 = notasR50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:00:35) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
a / 50 = notasR50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = a % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
File "XXXX", line 8
    a / 50 = notasR50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:02:16) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = float(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
a / 50 = notasR50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = a % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- ERROR:
File "XXXX", line 8
    a / 50 = notasR50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:03:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = float(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50 
notasR50 = a // 50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = a % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 13:03:21) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a = float(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50 
notasR50 = a // 50

# Valor restante a ser sacado com notas menores que R$ 50
restoR50 = a % 50

# Quantidade de notas de R$ 10
notasR10 = restoR50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
restoR10 = restoR50 % 10

# Quantidade de notas de R$ 2
notasR2 = restoR10 // 2

print(int(notasR50))
print(int(notasR10))
print(int(notasR2))
-- EXECUTION TIME:
0.129005
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:14:06) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

a# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a# Instituto de Computacao - UFAM
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:14:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    notas_R50 = valor // 50
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:14:58) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
File "XXXX", line 8
    notas_R50 = valor // 50
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:15:10) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- ERROR:
File "XXXX", line 8
    notas_R50 = valor // 50
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 13:15:40) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:14:22) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.125195
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:14:36) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.160982
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:15:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.123981
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:15:47) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.134743
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 12:15:48) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:15:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.150193
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:25:22) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.172821
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:38:50) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.17824
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:41:14) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.139365
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:32:19) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.173052
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:51:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.294114
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:52:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.126603
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:52:56) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.155144
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:53:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.139606
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:53:33) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.126155
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:53:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.172012
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:53:37) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque "))

# Quantidade de notas de R$ 50

notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.13024
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:53:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = float(input("Qual o valor do saque "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))
-- EXECUTION TIME:
0.143244
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
